Design: 로그인 화면 UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SKKUHelper">
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
             android:name=".StartActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
