--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.SKKUHelper">
+        android:theme="@style/Theme.SKKUHelper"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.assignment.AssignmentActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.start.StartActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -27,4 +31,5 @@
             android:name=".ui.main.MainActivity"
             android:exported="false" />
     </application>
+
 </manifest>
